# pe_library

./: CMakeLists.txt  LICENSE  README.md
include/pe_library/: bytecode.hpp  data_address.hpp  data_reference.hpp  dos.hpp  file.hpp  interval.hpp  nt.hpp  pe_version.hpp  reference_type.hpp  rich_data.hpp  rich_data_entry.hpp  section.hpp
include/pe_library/details/builders/: dos_builder.hpp  file_builder.hpp  nt_builder.hpp  rich_data_builder.hpp  sections_builder.hpp
include/pe_library/details/constants/: nt_constants.hpp  section_header_constants.hpp
include/pe_library/details/containers/: data_intervals_container.hpp  sections_container.hpp
include/pe_library/details/headers/: image_data_directory.hpp  image_dos_header.hpp  image_file_header.hpp  image_import_descriptor.hpp  image_load_config_code_integrity.hpp  image_load_config_directory32.hpp  image_load_config_directory64.hpp  image_nt_headers32.hpp  image_nt_headers64.hpp  image_optional_header32.hpp  image_optional_header64.hpp  image_section_header.hpp
include/pe_library/details/helpers/: bytecode_helper.hpp  bytes_helper.hpp  enum_helper.hpp  intervals_helper.hpp
include/pe_library/details/parsers/: dos_parser.hpp  file_parser.hpp  nt_headers_parser.hpp  rich_data_parser.hpp  sections_parser.hpp
include/pe_library/details/providers/: addresses_provider.hpp
sources/: data_address.cpp  data_reference.cpp  dos.cpp  file.cpp  interval.cpp  nt.cpp  rich_data.cpp  rich_data_entry.cpp  section.cpp
sources/details/builders/: dos_builder.cpp  file_builder.cpp  nt_builder.cpp  rich_data_builder.cpp  sections_builder.cpp
sources/details/containers/: data_intervals_container.cpp  sections_container.cpp
sources/details/helpers/: bytecode_helper.cpp  bytes_helper.cpp  intervals_helper.cpp
sources/details/parsers/: dos_parser.cpp  file_parser.cpp  nt_headers_parser.cpp  rich_data_parser.cpp  sections_parser.cpp
sources/details/providers/: addresses_provider.cpp
tests/: CMakeLists.txt
tests/file_parser_test/: file_parser_test.cpp  file_parser_test.hpp
